--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 </head>
 <!-- This comment is added -->
 <body>
+ <h1>updated build</h1>
         <form>
             <h2>Registration Form</h2>
             <label for="name">Name</label>
